sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: value sp
     sp boolean = false
     ^AlgCombSort:15: error: not found: value sp
			sp = false;	
                        ^AlgCombSort:18: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	} while(ecart >1 || sp=false  ) 
                         ^